# lab4

./: .clang-format  CMakeLists.txt  README.md
include/: bfs.h  binary_insertion.h  bubble.h  comb.h  counting.h  dfs.h  heap.h  insertion.h  merge.h  quick.h  selection.h  shaker.h  toInclude.h
src/: main.cpp
